--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget android-packageName="com.mb.android" android-versionCode="20000854" id="com.emby.mobile" ios-CFBundleIdentifier="com.emby.mobile" version="2.8.54" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+    <feature name="Chromecast">
+        <param name="android-package" value="acidhax.cordova.chromecast.Chromecast" />
+    </feature>
     <name>Emby</name>
     <description>
     Emby Mobile
@@ -29,6 +32,7 @@
     <splash density="port-xhdpi" src="res/android/xhdpi/splash-port.png" />
     <splash density="port-xxhdpi" src="res/android/xxhdpi/splash-port.png" />
     <splash density="port-xxxhdpi" src="res/android/xxxhdpi/splash-port.png" />
+    <resource-file src="google-services.json" target="app/google-services.json" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="webView" value="org.crosswalk.engine.XWalkWebViewEngine" />
     <preference name="xwalkVersion" value="21+" />
